# embodied-agents

./: .gitignore  .python-version  CONTRIBUTING.md  README.md  cache_profile.stats  install.bash  mkdocs.yml  profile_output.prof  pyproject.toml  requirements.txt
.github/workflows/: macos.yml  ubuntu.yml
docs/: Makefile  README.md  build_docs.md  conf.py  contributing.md  deep-dev.md  deep-dive.md  generate_api_docs.py  getting-started.md  index.md  index.rst  installation.md  mbodied_agents.agents.rst  mbodied_agents.base.rst  modules.rst  overview.md  requirements.txt
docs/_static/: custom.css
docs/_templates/: footer.html  header.html  layout.html
docs/api/: mbodied_agents_auto.md  mbodied_agents_backends.md  mbodied_agents_language.md  mbodied_agents_motion.md  mbodied_agents_sense.md  mbodied_data_recording.md  mbodied_robots.md  mbodied_robots_robot.md  mbodied_types.md
docs/api/agents/: agent.md  cli.md
docs/api/data/: replaying.md  utils.md
docs/api/hardware/: interface.md  realsense_camera.md  sim_interface.md
docs/api/robots/: robot_recording.md  sim_robot.md  xarm_robot.md
docs/api/types/: geometry.md  message.md  ndarray.md  sample.md
docs/api/utils/: import_utils.md
docs/building_blocks/: index.rst  mbodied_agents.agents.language.rst  mbodied_agents.agents.sense.rst  mbodied_agents.base.rst  mbodied_agents.data.rst  mbodied_agents.rst  mbodied_agents.types.rst
docs/building_blocks/backend/: index.rst
docs/building_blocks/cognitive_agent/: index.rst
docs/building_blocks/controls/: index.rst
docs/building_blocks/hardware_interface/: index.rst
docs/building_blocks/language_agent/: index.rst
docs/building_blocks/message/: index.rst
docs/building_blocks/motion_controls/: index.rst
docs/building_blocks/motor_agent/: index.rst
docs/building_blocks/recorder/: index.rst
docs/building_blocks/robot/: index.rst
docs/building_blocks/sample_class/: index.rst
docs/building_blocks/sensory_agent/: index.rst
docs/concepts/: index.rst
docs/concepts/agents/: index.rst
docs/concepts/controls/: index.rst
docs/concepts/types/: index.rst
docs/contributing/: index.rst
docs/contributing/dev_setup/: index.rst
docs/deep_dive/: index.rst  mbodied.agents.backends.rst  mbodied.agents.motion.rst  mbodied.agents.rst  mbodied.agents.sense.audio.rst  mbodied.agents.sense.rst  mbodied.hardware.rst  mbodied.robot.rst  mbodied.types.language.rst  mbodied.types.motion.rst  mbodied.types.rst  mbodied.types.sense.rst  mbodied.types.utils.rst
docs/getting_started/: index.rst
docs/glossary/: index.rst
docs/installation/: index.rst
docs/overview/: index.rst
docs/stylesheets/: extra.css
docs/system_components/: index.rst  mbodied.agents.backends.rst  mbodied.agents.language.rst  mbodied.agents.motion.rst  mbodied.agents.rst  mbodied.agents.sense.rst  mbodied.base.rst  mbodied.data.rst  mbodied.hardware.rst  mbodied.types.language.rst  mbodied.types.motion.rst  mbodied.types.rst  mbodied.types.sense.rst  mbodied_agents.agents.backends.rst  mbodied_agents.hardware.rst  mbodied_agents.rst
examples/: 1_simple_robot_agent.py  2_openvla_motor_agent_example.py  3_reason_plan_act_robot.py  4_language_reason_plan_act_robot.py  5_teach_robot_record_dataset.py  6_robot_with_rag.py  dpe_example.py  full_example.py  hri_example.py  hri_full_example.py  minimal_openvla_agent.py  motor_agent_example_openvla.py  reason_plan_act_robot.py  rt1.py  rt1_example.py  rt1_test.py  simple_robot_agent.ipynb  simple_robot_agent.py  simple_robot_agent_layered.py  simple_robot_agent_with_SimplerEnv.ipynb  using_motion_openvla.py
examples/servers/: gradio_example_openvla.py
mbodied/: __about__.py  __init__.py  cli.py  cns.py
mbodied/EKF/: __init__.py  extended_kalman_filter.py
mbodied/EKF/tests/: test_ekf.py  test_tree.py
mbodied/EKF/trajectory/: __init__.py  motion_vector.py
mbodied/EKF/tree_of_thought/: __init__.py  tree_of_thought.py
mbodied/EKF/world/: __init__.py  world_vector.py
mbodied/agents/: __init__.py  agent.py  cli.py
mbodied/agents/auto/: __init__.py  auto_agent.py
mbodied/agents/backends/: __init__.py  anthropic_backend.py  backend.py  gemini_backend.py  gradio_backend.py  httpx_backend.py  local_backend.py  ollama_backend.py  openai_backend.py  openvla_backend.py  reka_backend.py  serializer.py  vision2seq_backend.py
mbodied/agents/language/: __init__.py  language_agent.py  rag_agent.py  utils.py
mbodied/agents/motion/: __init__.py  (+3 more)
mbodied/base/: agent.py  motion.py  sample.py  serializer.py
mbodied/corp/: inspecting.py
mbodied/data/: recording.py  replaying.py  utils.py
mbodied/hardware/: README.md  interface.py  locobot_interface.py  realsense_camera.py  recording_interface.py  remote_interface.py  sim_interface.py  sim_recording_interface.py  xarm_interface.py
mbodied/hri/: hri.py
mbodied/robots/: __init__.py  robot.py  robot_recording.py  sim_robot.py  xarm_robot.py
mbodied/scripts/: rt_dino.py
mbodied/tree/: README.md  __init__.py  prompt.py  tree_of_thought.py
mbodied/types/: __init__.py  geometry.py  message.py  motion_controls.py  ndarray.py  sample.py  tool.py
mbodied/utils/: import_utils.py
resources/: intrinsic_matrix.npy
src/mbodied/: __about__.py
src/mbodied_agents/: __about__.py
tests/: pytest.ini  test_action_tokenizer.py  test_agent.py  test_anthropic.py  test_audio.py  test_augment_agent.py  test_auto_agent.py  test_backend.py  test_depth.py  test_depth_agent.py  test_dino_object_detection.py  test_gemini.py  test_gradio.py  test_httpx_ollama.py  test_image.py  test_language_agent.py  test_language_controls.py  test_messages.py  test_motions.py  test_ndarray.py  test_object_detection_agent.py  test_object_pose_estimator_3d.py  test_openai.py  test_openvla.py  test_openvla_agent.py  test_perf.py  test_rag_agent.py  test_recording.py  test_replaying.py  test_robot_recorder.py  test_rt1.py  test_rt_pali_agent.py  test_sample.py  test_segmentation_agent.py  test_senses.py  test_serializer.py  test_sim_interface.py  test_sim_recording_interface.py  test_sim_robot.py  test_streaming.py  (+3 more)
(+179 files in other folders)
