[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"
[project]
name = "mbodied"
dynamic = ["version"]
description = 'Embodied AI'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Mbodi Team", email = "info@mbodi.ai" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    'anthropic==0.34.2',
    'art==6.3',
    'backoff==2.2.1',
    'click==8.1.7',
    "compress-pickle>=2.1.0",
    "h5py>=3.11.0",
    "jsonref>=1.1.0",
    "numpy==2.1.1",
    'openai==1.47.0',
    'pillow==10.4.0',
    'pydantic==2.9.2',
    "ruamel-yaml>=0.18.6",
    "typer>=0.12.5",
]
[tool.setuptools]
packages = ["mbodied"]
# extras = ["xarm-python-sdk", "opencv-python", "torch", "transformers"]
# audio = ["playsound", "pyaudio", "openai-whisper"]
# all = [
#   "xarm-python-sdk",
#   "opencv-python",
#   "torch",
#   "transformers",
#   "playsound",
#   "pyaudio",
#   "openai-whisper",
#   "open3d",
#   "timm",
#   "torchvision",
#   "wandb",
# ]
[project.urls]
Documentation = "https://github.com/mbodiai/embodied-agents#readme"
Issues = "https://github.com/mbodiai/embodied-agents/issues"
Source = "https://github.com/mbodiai/embodied-agents"

[project.scripts]
mbodied = "mbodied.agents.cli:cli"

[project.optional-dependencies]
hf = [
    "datasets>=3.0.0",
    "gradio>=3.18.0",
    "gradio-client>=1.3.0",
]
extras = [
    "datasets>=3.0.0",
    "gradio>=3.18.0",
    "gradio-client>=1.3.0",
    "gymnasium>=0.29.1",
    "xarm-python-sdk>=1.13.8",
]

[tool.coverage.run]
source_pkgs = ["mbodied", "tests"]
branch = true
parallel = true
omit = ["mbodied/__about__.py"]

[tool.coverage.paths]
mbodied = ["mbodied/"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
extend-unsafe-fixes = ["ALL"]
# List of rules: https://docs.astral.sh/ruff/rules
select = [
  # flake8-builtins
  "A",
  # flake8-commas
  "COM812",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # flake8-annotations
  "ANN",
  # flake8-async
  "ASYNC",
  # flake8-bandid selected
  "S",
  # flake8-print
  "T20",
  # flake8-return
  "RET",
  # flake8-simplify
  "SIM",
  # flake8-unused-arguments
  "ARG",
  # flake8-use-pathlib
  "PTH",
  # eradicate
  "ERA",
  # pandas-vet
  "PD",
  # Import sort
  "I",
  # avoid shadowing
  "PLW",
]
ignore = [
  "D100",
  "D101",
  "D104",
  "D106",
  # missing-type-self
  "ANN101",
  # missing-type-cls
  "ANN102",
  # missing-type-kwargs
  "ANN003",
  # utf-8 encoding skip
  "UP009",
  # Missing return type annotation for special method `__init__`
  "ANN204",
  # Star-arg unpacking after a keyword argument is strongly discouraged
  "B026",
  # Missing type annotation for function argument `self`
  "ANN001",
  # Dynamically typed expressions (typing.Any) are disallowed in `wrapper`
  "ANN401",
  # We don't need docstrings for every method
  "ANN202",
  "D107",
  "D102",
  "D103",
  # Inline lambdas
  "E731",
  # Sometimes we need List and Tuple
  "UP006",
  "UP035",
  "ANN002",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = ["ALL"]
"**__init__.py" = ["F401"]
[tool.uv.sources]
mbodied = { workspace = true }
